--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -4,8 +4,25 @@
   background-color: @basic-blue-other;
 }
 
+.companions__title {
+  margin-bottom: 19px;
+}
+
 .companions__text {
+  margin: 0 0 25px;
+
   &--bold {
+    margin-bottom: 54px;
     font-weight: 700;
   }
+}
+
+.companions__list {
+  margin: 0 0 20px;
+  padding: 0;
+  list-style: none;
+}
+
+.companions__item {
+  margin-bottom: 9px;
 }
