--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -28,7 +28,7 @@
   height: 45px;
   margin-right: 16px;
 
-  @media (min-width: 768px) {
+  @media (min-width: @tablet-width) {
     width: 68px;
     height: 68px;
   }
