--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,4 +1,15 @@
+.copyright {
+  margin: 0;
+  padding-top: 13px;
+  border-top: 1px solid @special-grey-lightest;
+}
+
 .copyright__link {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+
   color: @special-grey;
 
   &:hover {
