--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -1,1 +1,17 @@
-// countries block
+.countries__title {
+  margin: 0 0 19px;
+}
+
+.countries__text {
+  margin: 0 0 60px;
+}
+
+.countries__list {
+  margin: 0 0 27px;
+  padding: 0;
+  list-style: none;
+}
+
+.countries__item {
+  margin-bottom: 9px;
+}
