--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,4 +1,19 @@
+.feedback {
+  padding-top: 97px;
+}
+
+.feedback__title {
+  margin-bottom: 19px;
+  text-align: center;
+}
+
+.feedback__form {
+  margin-bottom: 29px;
+}
+
 .feedback__text {
+  margin: 0 0 17px;
+  padding: 0 35px;
   text-align: center;
 }
 
@@ -13,4 +28,8 @@
   &:active {
     color: fade(@special-orange, 30%);
   }
+}
+
+.feedback__contacts {
+  margin-bottom: 0;
 }
