--- a/source/less/blocks/user-buttons.less
+++ b/source/less/blocks/user-buttons.less
@@ -29,7 +29,7 @@
 .user-buttons__item:not(.button) {
   .circle(40px);
 
-  @media (min-width: 1440px) {
+  @media (min-width: @desktop-width) {
     .circle(50px);
   }
 }
