--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -5,8 +5,19 @@
   background-color: @basic-blue-other;
 }
 
+.about__title {
+  margin: 0 0 19px;
+}
+
 .about__text {
+  margin: 0 0 20px;
+
   &--bold {
+    margin-bottom: 0;
     font-weight: 700;
   }
+}
+
+.about__button {
+  display: none;
 }
