--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,11 +1,3 @@
-.logo {
-  position: fixed;
-  top: 27px;
-  left: 25px;
-  z-index: 2;
-
-  @media (min-width: 768px) {
-    top: 45px;
-    left: 40px;
-  }
+.logo img {
+  display: block;
 }
