--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,4 +1,16 @@
 .page-footer {
+  position: relative;
+  z-index: 3;
+  margin-top: -25px;
   padding: 37px 25px 18px;
   background-color: @white;
+  border-radius: 25px 25px 0 0;
+}
+
+.page-footer__logo img {
+  margin: 0 auto 40px;
+}
+
+.page-footer__socials {
+  margin-bottom: 37px;
 }
