--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -1,1 +1,43 @@
-// table block
+.table {
+  width: 100%;
+}
+
+.table tbody {
+  counter-reset: listCounter;
+}
+
+.table__row {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  &--counter {
+    position: relative;
+    counter-increment: listCounter;
+
+    &::after {
+      content: counter(listCounter);
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .circle(34px);
+      .fontsize(16px);
+      color: @white;
+    }
+
+    &:first-child::after {
+      background-color: @special-orange;
+    }
+
+    &:nth-child(2)::after {
+      background-color: @special-yellow-dark;
+    }
+
+    &:nth-child(3)::after {
+      background-color: @basic-yellow;
+    }
+  }
+}
