--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -1,17 +1,44 @@
+.countries {
+  @media (min-width: @tablet-width) {
+    padding-right: 75px;
+    padding-left: 75px;
+  }
+}
+
 .countries__title {
   margin: 0 0 19px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 57px;
+    padding-right: 310px;
+  }
 }
 
 .countries__text {
   margin: 0 0 60px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 104px;
+    padding-right: 279px;
+    font-size: 28px;
+    line-height: 33px;
+  }
 }
 
 .countries__list {
   margin: 0 0 27px;
   padding: 0;
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 46px;
+  }
 }
 
 .countries__item {
   margin-bottom: 9px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 11px;
+  }
 }
