--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,3 +1,14 @@
+.logo {
+  display: block;
+  width: 96px;
+  height: 15px;
+
+  @media (min-width: @tablet-width) {
+    width: 166px;
+    height: 42px;
+  }
+}
+
 .logo img {
   display: block;
 }
