--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -5,6 +5,7 @@
   background-repeat: no-repeat, no-repeat;
 
   @media (min-width: @tablet-width) {
+    padding: 162px 0 96px;
     background-image: url("../../img/backgrounds/traveller-illustration-tablet.png"), url("../../img/backgrounds/globe-back-tablet.jpg");
     background-position: 70% 404px, 0% 382px;
     background-repeat: no-repeat, no-repeat;
@@ -33,6 +34,6 @@
 
 .promo__review {
   @media (min-width: @tablet-width) {
-    margin-bottom: 246px;
+    margin-bottom: 211px;
   }
 }
