--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -21,12 +21,24 @@
     background-color: @special-yellow-dark;
   }
 
+  @media (min-width: @tablet-width) {
+    padding: 17px 30px 13px;
+    .fontsize(20px);
+  }
+
   &--index {
     display: flex;
     padding: 23px;
     .fontsize(18px);
+    text-align: left;
     text-transform: none;
     border-radius: 10px;
+
+    @media (min-width: @tablet-width) {
+      padding: 29px 74px 27px 33px;
+      .fontsize(24px);
+      border-radius: 20px;
+    }
   }
 
   &--rectangular {
@@ -123,11 +135,6 @@
     &:hover {
       background-color: @basic-blue-light;
     }
-  }
-
-  @media (min-width: @tablet-width) {
-    padding: 17px 30px 13px;
-    .fontsize(20px);
   }
 }
 
