--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -1,10 +1,13 @@
 .companion-card {
-  margin-left: auto;
-  margin-right: auto;
   width: 270px;
   color: @special-grey;
   background-color: @white;
   border-radius: 10px;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .companion-card__avatar {
