--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -2,27 +2,67 @@
   background-image: url("../../img/backgrounds/companions-mobile.png");
   background-repeat: no-repeat;
   background-color: @basic-blue-other;
+
+  @media (min-width: @tablet-width) {
+    padding: 208px 74px 87px;
+  }
 }
 
 .companions__title {
   margin-bottom: 19px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 55px;
+  }
 }
 
 .companions__text {
   margin: 0 0 25px;
 
+  @media (min-width: @tablet-width) {
+    margin-bottom: 39px;
+    padding-right: 195px;
+    font-size: 28px;
+    line-height: 34px;
+  }
+
   &--bold {
     margin-bottom: 54px;
     font-weight: 700;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 59px;
+      font-size: 21px;
+      line-height: 24px;
+    }
   }
 }
 
 .companions__list {
-  margin: 0 0 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0 auto 20px;
   padding: 0;
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 81px;
+  }
 }
 
 .companions__item {
   margin-bottom: 9px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+
 }
