--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -3,6 +3,10 @@
   grid-template-columns: 1fr 60px;
   background-color: @white;
   border-radius: 20px;
+
+  @media (min-width: @tablet-width) {
+    grid-template-columns: 1fr 80px;
+  }
 }
 
 .feedback-form__input {
@@ -17,6 +21,11 @@
   background-color: @white;
   border: 0;
   border-radius: 20px 0 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 28px 36px;
+    .fontsize(24px);
+  }
 
   &:hover {
     color: fade(@special-grey, 50%);
@@ -35,4 +44,8 @@
   &::placeholder {
     color: fade(@special-grey, 30%);
   }
+}
+
+.feedback-form__button {
+  border-radius: 0 20px 20px 0;
 }
