--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,20 +1,40 @@
 .feedback {
   padding-top: 97px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 133px;
+    padding-bottom: 60px;
+  }
 }
 
 .feedback__title {
   margin-bottom: 19px;
   text-align: center;
-}
 
-.feedback__form {
-  margin-bottom: 29px;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 59px;
+    text-align: center;
+  }
 }
 
 .feedback__text {
   margin: 0 0 17px;
   padding: 0 35px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 65px;
+    font-size: 28px;
+    line-height: 32px;
+  }
+}
+
+.feedback__form {
+  margin-bottom: 29px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 60px;
+  }
 }
 
 .feedback__login-link {
@@ -32,4 +52,9 @@
 
 .feedback__contacts {
   margin-bottom: 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 35px;
+    .fontsize(28px);
+  }
 }
