--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,16 +1,34 @@
 .page-footer {
   position: relative;
   z-index: 3;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   margin-top: -25px;
   padding: 37px 25px 18px;
   background-color: @white;
   border-radius: 25px 25px 0 0;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 46px 40px 32px;
+  }
 }
 
-.page-footer__logo img {
+.page-footer__logo {
   margin: 0 auto 40px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .page-footer__socials {
   margin-bottom: 37px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
