--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,9 +1,17 @@
 .page-main__section {
   padding: 71px 25px 34px;
 
+  @media (min-width: @tablet-width) {
+    padding: 73px 40px 80px;
+  }
+
   &--top {
     color: @white;
     background-color: @basic-blue-other-dark;
+
+    @media (min-width: @tablet-width) {
+      background-color: @basic-blue-inner;
+    }
   }
 
   &--dark {
@@ -12,6 +20,10 @@
     z-index: 2;
     color: @white;
     background-color: @basic-blue-other;
+
+    @media (min-width: @tablet-width) {
+      margin-top: -40px;
+    }
   }
 
   &--light {
@@ -26,17 +38,19 @@
     z-index: 1;
     padding-top: 65px;
     background-color: @basic-yellow;
-  }
 
-  @media (min-width: @tablet-width) {
-    &--top {
-      background-color: @basic-blue-inner;
+    @media (min-width: @tablet-width) {
+      margin-top: -40px;
     }
   }
 }
 
 .page-main__section:not(.page-main__section--top) {
   border-radius: 0 0 25px 25px;
+
+  @media (min-width: @tablet-width) {
+    border-radius: 0 0 40px 40px;
+  }
 }
 
 .page-main__title-container {
@@ -48,6 +62,10 @@
   margin: 0;
   font-weight: 700;
   .fontsize(24px);
+
+  @media (min-width: @tablet-width) {
+    .fontsize(45px);
+  }
 
   &--orange {
     color: @special-orange;
