--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -1,5 +1,10 @@
 .table {
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    padding: 41px 35px 45px 92px;
+    .fontsize(28px);
+  }
 }
 
 .table tbody {
@@ -10,6 +15,13 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 0 18px;
+    border-top: 1px solid @special-grey-table;
+  }
 
   &--counter {
     position: relative;
@@ -26,6 +38,13 @@
       .circle(34px);
       .fontsize(16px);
       color: @white;
+
+      @media (min-width: @tablet-width) {
+        .circle(68px);
+        .fontsize(28px);
+        right: unset;
+        left: -90px;
+      }
     }
 
     &:first-child::after {
