--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -1,4 +1,4 @@
-// menu with js
+/* Menu -- JS */
 .menu {
   position: absolute;
   top: 0;
@@ -10,15 +10,14 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding-top: 99px;
-  padding-bottom: 41px;
+  padding: 99px 25px 41px;
   background-color: @white;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-start;
-    padding-top: 98px;
+    padding-top: 185px;
     padding-bottom: 93px;
   }
 
@@ -34,6 +33,7 @@
 .menu__toggle {
   position: fixed;
   top: 25px;
+  right: 25px;
   z-index: 3;
   align-self: flex-end;
   width: 19px;
@@ -105,6 +105,7 @@
   @media (min-width: @tablet-width) {
     order: 4;
     justify-content: flex-start;
+    width: 100%;
     padding: 0 57px;
   }
 
@@ -123,10 +124,10 @@
   }
 }
 
-
-// menu without js
+/* Menu -- no JS */
 .menu--no-js {
   position: static;
+  padding: 99px 0 41px;
 }
 
 .menu--no-js .menu__toggle {
@@ -134,5 +135,9 @@
 }
 
 .menu--no-js .menu__login {
-  position: absolute;
+  position: static;
+
+  @media (min-width: @tablet-width) {
+    margin-top: -145px;
+  }
 }
