--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -1,5 +1,6 @@
 .table {
   width: 100%;
+  padding-right: 45px;
 
   @media (min-width: @tablet-width) {
     padding: 41px 35px 45px 92px;
@@ -15,12 +16,17 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  padding: 13px 0 18px;
+  border-top: 1px solid fade(@black, 5%);
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
     padding: 20px 0 18px;
-    border-top: 1px solid @special-grey-table;
+  }
+
+  &:last-child {
+    border-bottom: 1px solid fade(@black, 5%);
   }
 
   &--counter {
@@ -31,7 +37,7 @@
       content: counter(listCounter);
       position: absolute;
       top: 0;
-      right: 0;
+      right: -40px;
       display: flex;
       justify-content: center;
       align-items: center;
