Задаёт сетку главной страницы на десктопе

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -7,6 +7,11 @@
   @media (min-width: @tablet-width) {
     padding: 41px 385px 89px 74px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: -85px;
+    padding: 190px 691px 163px 130px;
+  }
 }
 
 .about__title {
@@ -15,6 +20,10 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 40px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 57px;
+  }
 }
 
 .about__text {
@@ -22,8 +31,10 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 31px;
-    font-size: 28px;
-    line-height: 33px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 38px;
   }
 
   &--bold {
@@ -34,6 +45,12 @@
       margin-bottom: 52px;
       font-size: 21px;
       line-height: 25px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 85px;
+      padding-right: 194px;
+      line-height: 24px;
     }
   }
 
