--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -7,6 +7,10 @@
   @media (min-width: @tablet-width) {
     grid-template-columns: 1fr 80px;
   }
+
+  @media (min-width: @tablet-width) {
+    grid-template-columns: 1fr 330px;
+  }
 }
 
 .feedback-form__input {
@@ -48,4 +52,9 @@
 
 .feedback-form__button {
   border-radius: 0 20px 20px 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 30px 36px 27px;
+    text-align: left;
+  }
 }
