--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -7,4 +7,13 @@
   line-height: 22px;
   color: @special-grey;
   background-color: @basic-steelblue;
+
+  @media (min-width: @tablet-width) {
+    font-size: 28px;
+    line-height: 33px;
+  }
+
+  @media (min-width: @desktop-width) {
+    line-height: 34px;
+  }
 }
