--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,4 +7,8 @@
     background-image: none;
     background-color: @basic-blue-inner;
   }
+
+  @media (min-width: @desktop-width) {
+    background-image: none;
+  }
 }
