--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -5,6 +5,10 @@
     padding: 73px 40px 80px;
   }
 
+  @media (min-width: @desktop-width) {
+    padding: 161px 131px 134px;
+  }
+
   &--top {
     color: @white;
     background-color: @basic-blue-other-dark;
@@ -24,6 +28,10 @@
     @media (min-width: @tablet-width) {
       margin-top: -40px;
     }
+
+    @media (min-width: @tablet-width) {
+      margin-top: -58px;
+    }
   }
 
   &--light {
@@ -42,6 +50,10 @@
     @media (min-width: @tablet-width) {
       margin-top: -40px;
     }
+
+    @media (min-width: @tablet-width) {
+      margin-top: -58px;
+    }
   }
 }
 
@@ -50,6 +62,10 @@
 
   @media (min-width: @tablet-width) {
     border-radius: 0 0 40px 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    border-radius: 0 0 58px 58px;
   }
 }
 
