--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -4,6 +4,10 @@
   @media (min-width: @tablet-width) {
     padding-top: 124px;
   }
+
+  @media (min-width: @tablet-width) {
+    padding-top: 121px;
+  }
 }
 
 .address__container {
@@ -13,8 +17,19 @@
   background-color: @basic-yellow;
   border-radius: 25px;
 
-  @media (min-width: @tablet-width)  {
+  @media (min-width: @tablet-width) {
     padding: 0 75px 84px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    width: 1322px;
+    margin: 0 auto;
+    padding: 0 75px 61px;
   }
 }
 
@@ -28,6 +43,18 @@
     margin-bottom: 62px;
     .fontsize(28px);
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+    padding-left: 346px;
+  }
+}
+
+.address__button {
+  @media (min-width: @desktop-width) {
+    width: 324px;
+    padding-right: 63px;
+  }
 }
 
 .address__map-container {
@@ -37,6 +64,10 @@
   width: 100%;
   height: 328px;
   overflow-x: hidden;
+
+  @media (min-width: @desktop-width) {
+    height: 584px;
+  }
 }
 
 .address__map-container iframe {
