--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -103,5 +103,10 @@
     bottom: 26px;
     left: 30px;
     padding-left: 29px;
+    .fontsize(20px);
+  }
+
+  @media (min-width: @desktop-width) {
+    bottom: 27px;
   }
 }
