--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -24,8 +24,8 @@
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr min-content;
-    padding-top: 0;
-    padding-bottom: 0;
+    margin-top: -53px;
+    padding: 0;
     background-color: transparent;
   }
 }
@@ -128,6 +128,10 @@
 .menu--no-js {
   position: static;
   padding: 99px 0 41px;
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+  }
 }
 
 .menu--no-js .menu__toggle {
