--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -15,6 +15,10 @@
     align-items: center;
     padding: 46px 40px 32px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 47px 58px 43px;
+  }
 }
 
 .page-footer__logo {
