--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -5,6 +5,11 @@
     padding-top: 74px;
     padding-bottom: 63px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 107px;
+    padding-bottom: 165px;
+  }
 }
 
 .rates__title {
@@ -13,6 +18,10 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 32px;
     text-align: center;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 83px;
   }
 }
 
@@ -40,6 +49,10 @@
     align-items: center;
     .fontsize(20px);
     text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 73px;
   }
 }
 
