--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -6,6 +6,10 @@
     padding: 41px 35px 45px 92px;
     .fontsize(28px);
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 51px 345px 51px 164px;
+  }
 }
 
 .table tbody {
@@ -23,6 +27,10 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 20px 0 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 19px 0;
   }
 
   &:last-child {
