Добавляет универсальные стили центровщика

--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -7,6 +7,15 @@ img {
   height: auto;
 }
 
+.wrapper {
+  @media (min-width: @desktop-width) {
+    box-sizing: border-box;
+    width: 1440px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
